src/objects/vlocity_ins__ContractDocumentAccessControl__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>A custom setting that specifies whether a user or profile can review, edit or have full access to an online contract document. This is a hierarchy type custom setting.</description>
    <fields>
        <fullName>vlocity_ins__EditDocument__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a user or profile can edit (redline) the contract document</description>
        <label>Edit Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FullDocumentAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a user or profile has full access to the contract document - i.e. ability to edit as well as accept/reject redlines created by other users</description>
        <label>Full Document Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NoAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReviewDocument__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a user or profile can read and review the contract document</description>
        <label>Review Document</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Document Access Control</label>
</CustomObject>